Update README.md with error messages